# github_commits_etl

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/mysql/github_etl/: authors_dim.ibd  commits_fact.ibd  repositories_dim.ibd
data/mysql/mysql/: general_log_202.sdi  slow_log_203.sdi
data/mysql/performance_schema/: accounts_138.sdi  binary_log_trans_180.sdi  cond_instances_77.sdi  data_lock_waits_154.sdi  data_locks_153.sdi  events_errors_su_132.sdi  events_errors_su_133.sdi  events_errors_su_134.sdi  events_errors_su_135.sdi  events_errors_su_136.sdi  events_stages_cu_104.sdi  events_stages_hi_105.sdi  events_stages_hi_106.sdi  events_stages_su_107.sdi  events_stages_su_108.sdi  events_stages_su_109.sdi  events_stages_su_110.sdi  events_stages_su_111.sdi  events_statement_112.sdi  events_statement_113.sdi  events_statement_114.sdi  events_statement_115.sdi  events_statement_116.sdi  events_statement_117.sdi  events_statement_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_transacti_124.sdi  events_transacti_125.sdi  (+72 more)
src/: extractor.py  heatmap.py  main.py
(+6 files in other folders)
