[tool.poetry]
name = "github_etl"
version = "0.1.0"
description = ""
authors = ["Joshua Leong <juushdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.0"
SQLAlchemy = "^1.4.21"
importlib-metadata = "^4.6.1"
typing-extensions = "^3.10.0"
PyMySQL = "^1.0.2"
loguru = "^0.5.3"
tabulate = "^0.8.9"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
